
package trayectos;

public enum Ritmo {
  RAPIDO,
  MODERADO,
  SUAVE,

  @Override
  public String toString() {
    return this.Ritmo
  }
}
